Move scripts to pastebin.